--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -9,7 +9,10 @@
  * @NOTE: This file is ignored from Git by default with the .gitignore included
  * in ZendSkeletonApplication. This is a good practice, as it prevents sensitive
  * credentials from accidentally being committed into version control.
+ *
+ * @pbc
  */
 
 return [
+
 ];
